# first-cloud-project

./: readme.txt
ChunkServer/: .anjuta_sym_db.db  .cproject  .project  Makefile.am  configure.ac
ChunkServer/src/: Chunk.cpp  Chunk.h  ChunkServer.cpp  LogFile.cpp  LogFile.h  Makefile.am  SettingsMgr.cpp  SettingsMgr.h  TerrainEngine.cpp  TerrainEngine.h  Token.cpp  Token.h  main.cc  main.cpp  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
CocosLinuxLuaGame/: .project  config.json  run.sh
ElixirServer/: AiEngine.ex
ProtoBufs/: CommsMessages.pb.cc  CommsMessages.pb.h  CommsMessages.pb.rb  CommsMessages.proto  CommsMessages_pb.lua  compile.sh  webservice.proto  webservice_pb.lua
RabbitMq/: .provider.rb.swp  install.sh  provider.rb  rabbit_queue_defs.json  setup.sh
TestClient/: AssemblyInfo.cs  Main.cs  TestClient.csproj
TestRubyWebsockets/: client.rb  install.sh
TestWorldRabbitMq/: AssemblyInfo.cs  Main.cs  TestWorldRabbitMq.csproj
TestWorldRest/: AssemblyInfo.cs  Main.cs  Program.cs  TestWorldRest.csproj
database/: riak.txt
dotnet_server/: ActorService.cs  AssemblyInfo.cs  IMapService.cs  Main.cs  MapService.cs  RestServer.cs  Test.cs  dotnet_server.csproj  dotnet_server.sln  dotnet_server.userprefs  info.proto
elixir_umbrella/: README.md  mix.exs
elixirserver/: .gitignore  README.md  mix.exs
elixirwebserver/: README.md  mix.exs
kv/: mix.exs  sean_eventstreams
kv/lib/: kv.ex
noise/: complexplanet.cpp  make.sh
voxel-world/: AssemblyInfo.cs  Main.cs  app.config  voxel-world.csproj  voxel-world.sln  voxel-world.userprefs
(+236 files in other folders)
